update overlap issue

--- a/css/product-detail.css
+++ b/css/product-detail.css
@@ -162,7 +162,7 @@
     left: 0;
     opacity: 0;
     transition: .3s cubic-bezier(.25, .8, .5, 1);
-    z-index: 2;
+    z-index: 3;
 }
 
 .overflow_x_container.float .overflow_overlay {
@@ -177,6 +177,10 @@
 .overflow_x_container.float .btn_right {
     pointer-events: none;
     color: #d2d2d2;
+}
+
+.overflow_x_container.float .rp_product_detail_box:not(.active) {
+    z-index: 2;
 }
 
 .rp_product_detail_box.wide {
